labs/101-kubernetes/eps-nginx-node4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-node4
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx-node4
  template:
    metadata:
      labels:
        app: nginx-node4
    spec:
      nodeSelector:
        kubernetes.io/hostname: node4
