labs/101-kubernetes/vpa-busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpa-busybox
  labels:
    app: vpa-busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpa-busybox
  template:
    metadata:
      labels:
        app: vpa-busybox
    spec:
      containers:
      - name: sample-container
        image: busybox
        command: ["/bin/sh"]
        args:
          - -c
          - "while true; do yes > /dev/null; sleep 1; done"
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
