labs/101-kubernetes/wordpress.yaml
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: wordpress
  name: wordpress
spec:
  containers:
  - image: nginx
    name: wordpress-web
  - image: mariadb
    name: wordpress-db
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
