labs/101-kubernetes/matchexpress-myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    matchExpressions:
      - key: env
        operator: In
        values: ["production", "staging"]
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
