labs/101-kubernetes/my-nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
name: my-nginx
labels:
    run: my-nginx
spec:
ports:
- port: 80
    protocol: TCP
    targetPort: 8080
selector:
    run: my-nginx
